z-index issue fixed

--- a/stranger/src/css/style.css
+++ b/stranger/src/css/style.css
@@ -403,6 +403,8 @@ html,
 .pop-up .main {
 	width: 80%;
 	margin: 20px 10px;
+	position: relative;
+	z-index: 2;
 }
 
 .mobile {
